# ample

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  imgui.ini
Ample/: CMakeLists.txt  README.md
Ample/Ample/include/: Storage.h
Ample/Ample/src/: Activity.cpp
Ample/Basis/include/: Activity.h
Ample/Basis/src/: Activity.cpp  Condition.cpp
Ample/Control/include/: EventHandler.h  EventManager.h
Ample/Control/src/: EventHandler.cpp  EventManager.cpp
Ample/Draw/include/: Trash.h
Ample/Draw/src/: Trash.cpp
Ample/include/: Activity.h  Behaviour.h  Camera.h  Camera2d.h  CameraOrtho.h  CameraPerspective.h  Clock.h  Colors.h  Condition.h  ContactListener.h  Debug.h  Error.h  EventHandler.h  EventManager.h  Exception.h  FragmentShader.h  GraphicShape.h  GraphicalObject.h  GraphicalObject2d.h  GraphicalObject2dIO.h  GraphicalObject3d.h  GraphicalObjectIO.h  Layer.h  LayeredWindowActivity.h  LightSource.h  Logger.h  LogicBlock.h  Noncopyable.h  OpenGLEnvironment.h  OsManager.h  PerlinNoise.h  RegularPolygon.h  SDLEnvironment.h  Scene.h  Scene2d.h  ScreenCamera.h  ScreenObject.h  Shader.h  ShaderProcessor.h  Singleton.h  (+16 more)
Ample/src/Ample/: Activity.cpp  LogicBlock.cpp  Storage.cpp
Ample/src/Basic/: Activity.cpp  Behaviour.cpp  Storage.cpp
Ample/src/Control/: EventHandler.cpp  EventManager.cpp
Ample/src/Filing/: GraphicalObject2dIO.cpp  GraphicalObjectIO.cpp  Scene.cpp  Scene2d.cpp  WorldObject2dIO.cpp  WorldObjectIO.cpp
Ample/src/Geometry/: RegularPolygon.cpp  Vector.cpp
Ample/src/Graphics/: Camera.cpp  Camera2d.cpp  CameraOrtho.cpp  CameraPerspective.cpp  Color.cpp  Colors.cpp  GraphicShape.cpp  GraphicalObject.cpp  GraphicalObject2d.cpp  Layer.cpp  LayeredWindowActivity.cpp  ScreenCamera.cpp  ScreenObject.cpp  ShaderProcessor.cpp  Vector2d.cpp  VertexArray.cpp  VertexShader.cpp  WindowObject.cpp
Ample/src/Os/: Clock.cpp  Error.cpp  Exception.cpp  Logger.cpp  OpenGLEnvironment.cpp  OsManager.cpp  SDLEnvironment.cpp  Window.cpp  WindowActivity.cpp
Ample/src/Physics/: WorldDistanceJoint.cpp  WorldJoint2d.cpp  WorldLayer2d.cpp  WorldObject2d.cpp
Ample/src/Utils/: Noncopyable.cpp  Singleton.cpp  Utils.cpp
Ample/src/Window/: Window.cpp  WindowActivity.cpp
Ample/test/: CMakeLists.txt  testActivity.cpp  test_all.cpp
core/: CMakeLists.txt
core/include/ample/: Action.h  ActionsFactory.h  Activity.h  Behaviour.h  Camera.h  CameraAction.h  CameraOrtho.h  CameraPerspective.h  CameraTranslateAction.h  CamerasFactory.h  Circle.h  Clock.h  CollisionTransition.h  Color.h  ContactListener.h  ControlledObject.h  Debug.h  DistanceTransition.h  EditorIO.h  EnvironmentTransition.h  EventHandler.h  EventListener.h  EventManager.h  Exception.h  Factory.h  FollowObjectAction.h  GLContext.h  Game2d.h  Game2dEditor.h  GameController.h  GameEnvironment.h  GameException.h  GraphicalAction.h  GraphicalEdge.h  GraphicalObject.h  GraphicalObject2d.h  GraphicalObject2dIO.h  GraphicalObjectIO.h  GraphicalObjectsFactory.h  GraphicalPolygon.h  (+82 more)
core/src/Basic/: Activity.cpp  Behaviour.cpp
core/src/Control/: EventManager.cpp
core/src/Filing/: EditorIO.cpp  GraphicalObject2dIO.cpp  GraphicalObjectIO.cpp  JsonIO.cpp  NamedObject.cpp  NamedStoredObject.cpp  Scene2d.cpp  StoredObject.cpp  UniqueObject.cpp  WorldObject2dIO.cpp
core/src/Game/: GameController.cpp  GameEnvironment.cpp  GameException.cpp  LevelLoader.cpp  LevelSwitcher.cpp  NamedObject.cpp  Namespace.cpp  StateMachine.cpp  StoredNamedObject.cpp
core/src/Geometry/: Circle.cpp  Point.cpp  Rectangle.cpp  Shape.cpp  VectorRectangle.cpp
core/src/Graphics/: Camera.cpp  CameraOrtho.cpp  CameraPerspective.cpp  Color.cpp  GraphicalEdge.cpp  GraphicalObject.cpp  GraphicalObject2d.cpp  GraphicalPolygon.cpp  Layer.cpp  LayeredWindowActivity.cpp  ScreenObject.cpp  Texture.cpp  VertexArray.cpp  VertexArrayFace2d.cpp  VertexArraySide2d.cpp
core/src/Os/: Clock.cpp  Exception.cpp  GLContext.cpp  ILEnvironment.cpp  OpenGLEnvironment.cpp  SDLEnvironment.cpp  SDLWindow.cpp  Window.cpp  WindowActivity.cpp
core/src/Physics/: ContactListener.cpp  WorldContact2d.cpp  WorldDistanceJoint.cpp  WorldFrictionJoint2d.cpp  WorldGearJoint2d.cpp  WorldJoint2d.cpp  WorldLayer2d.cpp  WorldMotorJoint2d.cpp  WorldMouseJoint2d.cpp  WorldObject2d.cpp  WorldPrismaticJoint2d.cpp  WorldPulleyJoint2d.cpp  WorldRevoluteJoint2d.cpp  WorldRopeJoint2d.cpp  WorldWeldJoint2d.cpp  WorldWheelJoint2d.cpp
core/src/Utils/: Utils.cpp
demo/: CMakeLists.txt
demo/include/: CameraBehavior.h  CameraRemoter.h  DemoGame.h  KeyboardControlCamera.h  SquareBehavior.h
demo/objs/: data.json  need-for-speed-first-scene.json
demo/objs/scenes/: need-for-speed-first-scene.json
demo/src/: CameraBehavior.cpp  CameraRemoter.cpp  DemoGame.cpp  SquareBehavior.cpp  main.cpp
engine/: CMakeLists.txt
engine/src/: main.cpp
gui/: CMakeLists.txt
gui/include/: AmpleGui.h  Browser.h  Editor.h  ImguiActivity.h  InterfaceUnit.h  LevelBrowser.h  LevelEditor.h  ObjectConstructor.h  ObjectGui.h  ObjectStorageGui.h  Observer.h  SliceManager.h  StateMachineBrowser.h  StateMachineEditor.h  StateMachineManager.h  TabBrowser.h  TabEditor.h  TextureManager.h  Utils.h
gui/include/objects/: ActionGui.h  CameraTranslateActionGui.h  CollisionTransitionGui.h  FollowObjectActionGui.h  GraphicalEdgeGui.h  GraphicalObject2dGui.h  GraphicalObjectGui.h  GraphicalPolygonGui.h  GraphicalRotateActionGui.h  KeyboardTransitionGui.h  LevelGui.h  ObjectGroupActionGui.h  ObjectGui.h  PhysicalApplyForceActionGui.h  SliceGui.h  StateGui.h  StateMachineGui.h  TextureGui.h  TimerTransitionGui.h  TransitionGui.h  WorldObjectGui.h
gui/src/: AmpleGui.cpp  Browser.cpp  Editor.cpp  ImguiActivity.cpp  InterfaceUnit.cpp  LevelBrowser.cpp  LevelEditor.cpp  ObjectConstructor.cpp  ObjectStorageGui.cpp  Observer.cpp  SliceManager.cpp  StateMachineBrowser.cpp  StateMachineEditor.cpp  StateMachineManager.cpp  TabEditor.cpp  TextureManager.cpp  Utils.cpp  main.cpp
test/: CMakeLists.txt  testActivity.cpp  testJsonIO.cpp  test_all.cpp
(+99 files in other folders)
